--- a/index.html
+++ b/index.html
@@ -88,21 +88,16 @@
 		  <h4> Educator | Mentor | Consultant </h4>
           </h1>
           <p class="lead mb-5">
-	<b>Past</b>
 	<br/><br/>
-	I was an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program from 2021-2023.
-
-		  <br/><br/>
-            I was a postdoctoral research fellow with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data between 2019-2021. 
-		  
-		<br/><br/>
-		
-		I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University between 2014-2019.
-  
-			<br/><br/>
-			My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder for 2019, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member at FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Women in Machine Learning, Deep Learning Edinburgh, <a href="https://spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision</a>), and am grateful to have been an invited speaker at institutes such as AI Wadhwani, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
-			
-</p>
+	<b>Past Experience</b>
+	<ul>
+	<li>2021-23: I was an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program.</li>
+	<li>2019-21: I was a postdoctoral research fellow with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data. </li>
+	<li>2014-19: I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.</li>
+	</ul>
+	<br/><br/>
+	My research work has been variously funded by the Government of India, European research council, US department of defense and Five AI (autonomous driving startup). I am an IET Postgraduate Research award holder for 2019, have <a href=https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en style="text-decoration:none">published several papers in top-tier CV and ML conferences</a>, was selected for the FDL NASA programme 2019, and was an invited panel member at FDL Europe Big Think 2020. I have presented my research at various international conferences (NeurIPS, CVPR, ICLR) and workshops (Women in Machine Learning, Deep Learning Edinburgh, <a href="https://spacestudios.org.uk/art-technology/reconfigured-vision-workshop/">Reconfigured Vision</a>), and am grateful to have been an invited speaker at institutes such as AI Wadhwani, ISI Kolkata, IIT Kharagpur, INRIA Paris Central, INRIA Paris Saclay. 
+	 </p>
 
           <div class="social-icons">
             <a href="https://www.linkedin.com/in/saumya-jetley-974aa69b/">
