--- a/index.html
+++ b/index.html
@@ -87,10 +87,11 @@
             <span class="text-primary">Jetley</span>
 		  <h4> Educator | Mentor | Consultant </h4>
           </h1>
-          <p class="lead mb-5">
+          <p class="lead mb-3">
 	<br/><br/>
 	<b>Past Experience</b>
 	<ul>
+	list-style: none;
 	<li>2021-23: I was an Assistant Professor at <a href="https://plaksha.edu.in/faculty-details/dr-saumya-jetley">Plaksha University<a/> and the Associate Director of Academics for their Technology Leaders Program.</li>
 	<li>2019-21: I was a postdoctoral research fellow with Michele Sebag at the <a href="https://tao.lri.fr/tiki-index.php">TAU Team, INRIA-Paris Saclay</a>. I work on causal inference in the context of French job market, alongside the industrial partner <a href="https://www.qapa.fr/">QAPA</a>, and on privacy-preserving predictive analysis for French covid data. </li>
 	<li>2014-19: I completed my PhD in computer vision and machine learning algorithms for AI systems, with a special focus on interpretability and robustness, under <a href=http://www.robots.ox.ac.uk/~phst/ style="text-decoration:none">Phil Torr</a> at Oxford University.</li>
