--- a/index.html
+++ b/index.html
@@ -109,8 +109,11 @@ F
             <a href="https://twitter.com/saumyajetley">
               <i class="fab fa-twitter"></i>
             </a>
-<!--        <a href="#">
-              <i class="fab fa-facebook-f"></i>
+	    <a href="https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en">
+              <i class="fa-brands fa-google-scholar"></i>
+            </a>
+<!--        <a href="">
+              <i class="fa-brands fa-google-scholar"></i>
             </a>
 -->
           </div>
