--- a/index.html
+++ b/index.html
@@ -207,7 +207,15 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
           <h2 class="mb-5">Publications</h2>
 
     <p class="lead mb-5">
+      <h6> [2021] </h6>
 
+      <b> Extremely Private Supervised Learning</b>, 
+      Armand Lacombe, Saumya Jetley, Michele Sebag <i>ICLR 2021 workshop on Synthetic Data Generation Quality, Privacy, Bias; CAp 2021</i>
+      [<a href="https://inria.hal.science/hal-03620873/document">pdf</a>]
+      [<a >code</a>]
+      [<a href="./bibs/Expril.html">bibtex</a>]<br/><br/>
+
+	    
       <h6> [2019] </h6>
 
       <b> Straight to Shapes++: Real-time Instance Segmentation Made More Accurate,</b> 
