--- a/index.html
+++ b/index.html
@@ -182,6 +182,8 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
 
 <li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='https://www.usine-digitale.fr/article/instantanee-sans-discrimination-qapa-et-dataiku-developpent-la-recherche-d-emploi-du-futur-avec-de-l-ia.N926244'> JobAgile: Transforming the French job market</a></div><il>
 
+<li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='./projects/Project7-Expril.html'>Extremely Private Supervised Learning</a></div><il>
+
 <li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='./projects/Project6-StraightToShapes++.html'>Straight to Shapes++: Real-time Instance Segmentation Made More Accurate</a></div><il>
 	
 <li><div class="mb-3" style="font-size:130%; color:#727b84"><a href='./projects/Project5-WithFriendsLikeThese.html'>With Friends Like These, Who Needs Adversaries?</a></div><il>
