--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ F
               <i class="fab fa-twitter"></i>
             </a>
 	    <a href="https://scholar.google.com/citations?user=jdWaKDIAAAAJ&hl=en">
-              <i class="fa-brands fa-google-scholar"></i>
+              <i class="fab fa-google"></i>
             </a>
 <!--        <a href="">
               <i class="fa-brands fa-google-scholar"></i>
