--- a/index.html
+++ b/index.html
@@ -408,6 +408,10 @@ Such energy, great leadership, AI for social good in Indian space, ftw!
         <h2 class="mb-5">Reviewer duties</h2>
         <p class="lead mb-5">
 		<br/>
+		- Technical Program co-chair of <a href="https://www.conf-ai.com/">2nd Conference on AI 2023</a>
+		<br/>
+		- Founding Program co-chair of <a href="https://www.conf-ai.com/confai2022">1st Conference on AI 2022</a> 
+		<br/>
 		- I will be on the program committee for IJCAI'21.
 		<br/>
 		- I have served as a reviewer for NeurIPS'18, ECCV'20, NeurIPS'20.
