--- a/profile.html
+++ b/profile.html
@@ -89,6 +89,7 @@
           <h1 class="mb-0">Saumya
             <span class="text-primary">Jetley</span>
           </h1>
+            <a href="./Resume_Saumya Jetley_AI_innovation.pdf">Curriculum Vitae</a>
         </div>
 
         <div>
