--- a/profile.html
+++ b/profile.html
@@ -101,7 +101,7 @@
         At Plaksha, I became the 2nd founding faculty in CSAI, leading charge of the design of future-ready graduate programmes in tech, delivering some of the first lectures in <span style="font-size:22px; color:black">computational thinking, and computer vision</span>. I wrote the early drafts of <span style="font-size:22px; color:black">Digital centres on Water and Agriculture</span>, served as the first <span style="font-size:22px; color:black">associate director of the flagship AI program</span> (in partnership with UC Berkeley), and led the first<span style="font-size:22px; color:black"> Conference on AI for sustainability</span>.
         </p>
 
-    <p class="lead mb-5" style="font-size:20px"> In this next phase, I am intent on bringing my AI expertise, coding skills & strategic vision to building <span style="font-size:22px; color:black"> Frontier Tech </span> through & beyond mission <a href="https://www.adhyaai.com">AdhyaAI</a>. 
+    <p class="lead mb-5" style="font-size:20px"> In this next phase, I am intent on bringing my AI expertise, analytical skills & strategic vision to building <span style="font-size:22px; color:black"> Frontier Tech </span> through & beyond mission <a href="https://www.adhyaai.com">AdhyaAI</a>. 
         
         In envisioning the role of AI not as standalone features driving the UI or a conversation piece but as multiple, reasoning AI agents that are able to work cohesively and seamlessly in co-solving a complex task - I am looking to go full-time in my domain of interest - <span style="font-size:22px; color:black">AI & sustainable futures</span>.
     </p>
